# Rag-System

./: .dockerignore  .env.compose.example  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin_routes.py  auth_routes.py  chat_routes.py  document_routes.py  eval_routes.py  feedback_routes.py  retrieval_routes.py  router.py  routes.py
backend/app/core/: access.py  auth.py  chat_realtime.py  client_ip.py  database.py  error_handlers.py  exceptions.py  middleware.py  redis.py
backend/app/schemas/: admin.py  auth.py  chat.py  document.py  evaluation.py  feedback.py  ingestion.py  retrieval.py
backend/app/scripts/: apply_migrations.py
backend/app/services/: audit_log_service.py  chat_service.py  chunk_artifact_service.py  chunk_storage_service.py  chunking_service.py  document_parser.py  document_service.py  embedding_service.py  evaluation_service.py  feedback_service.py  job_queue_service.py  llm_service.py  observability_service.py  parsed_artifact_service.py  profile_service.py  prompt_builder.py  rate_limit_service.py  reranking_service.py  retrieval_service.py  storage_service.py
backend/app/workers/: index_worker.py
database/: README.md
database/migrations/: 0001_extensions_and_helpers.sql  0002_create_tables.sql  0003_create_indexes.sql  0004_enable_rls.sql  (+9 more)
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+42 files in other folders)
