[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-assistant-backend"
version = "0.1.0"
description = "Backend foundation for a production-style RAG document assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=43.0,<46.0",
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "pgvector>=0.4,<0.5",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pdfplumber>=0.11,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "redis>=5.0,<6.0",
  "sentence-transformers>=3.0,<4.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
